# Calculator

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
Calculator.egg-info/: PKG-INFO  SOURCES.txt
calculator/: calculate.py  test.py
calculator_test/: calculate_test.py
