[metadata]
name = "Calculator"
version = "0.0.1"
author = "Faye Nielsen"
author_email = "fayemnielsen@gmail.com"
description = "Basic calculator functionality"
long_description = file: README.md
long_description_content_type = text/markdown
url = GITHUB REPOSITORY LINK
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.9
include_package_data = True